JSAI/error/src/test/resources/base/aitests_a007.js
var x = 1;
print(x)
var y = 2;
print(y)
var z = x+y; 
print(z)
